# AgencityLab

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
agencitylab/: __init__.py
agencitylab/analysis/: __init__.py  diagnostics.py  metrics.py  multi_scale.py  regimes.py  reports.py  signature.py  spectrum.py  stability.py
agencitylab/analysis/information/: __init__.py  agencity_info.py  landauer.py  shannon.py  vopson.py
agencitylab/api/: __init__.py  analyze.py  compute.py  pipeline_api.py  shortcuts.py  visualize.py
agencitylab/backends/: __init__.py  jax_backend.py  numba_backend.py  numpy_backend.py  selector.py
agencitylab/config/: __init__.py  defaults.py  modes.py  runtime.py  schema.py
agencitylab/constants/: __init__.py  physics.py  reference_values.py  units.py
agencitylab/core/: __init__.py  activation.py  activity.py  agencity.py  autocorr.py  beta.py  crm.py  memory.py  normalization.py  organization.py  power.py  safeguards.py  tau.py  validation.py
agencitylab/data/: __init__.py  pipeline.py  validation.py
agencitylab/data/feature_extract/: __init__.py  embeddings.py  from_graph.py  from_image.py  from_text.py  signal_builder.py
agencitylab/data/loaders/: __init__.py  csv_loader.py  custom_loader.py  json_loader.py  numpy_loader.py  pandas_loader.py
agencitylab/data/transforms/: __init__.py  detrend.py  interpolate.py  normalize.py  resample.py  smoothing.py  windowing.py
agencitylab/dynamics/: __init__.py  attractors.py  bifurcation.py  delays.py  integrators.py  stability.py  system.py
agencitylab/io/: __init__.py  hdf5.py  json.py  load.py  netcdf.py  save.py
agencitylab/models/: __init__.py  config_model.py  dataset.py  experiment.py  metadata.py  result.py  signal.py
agencitylab/pipeline/: __init__.py  builder.py  cache.py  execution.py  hooks.py  steps.py
agencitylab/utils/: __init__.py  exceptions.py  interpolation.py  logging.py  math_utils.py  profiling.py  sliding_window.py
agencitylab/visualization/: __init__.py  components.py  export.py  heatmaps.py  phase.py  spectrum.py  styles.py  timeseries.py
agencitylab/visualization/dashboards/: __init__.py  plotly_dash.py  streamlit_app.py
benchmarks/: README.md
benchmarks/performance/: scaling_test.py
benchmarks/realistic/: mixed_signal.py
benchmarks/synthetic/: noise_benchmark.py  sine_benchmark.py
docs/: README.md  conf.py  index.md
docs/api/: analyze.md  compute.md  data.md  index.md  models.md  pipeline.md  utils.md  visualize.md
docs/examples/: advanced_pipeline.md  basic_usage.md  data_loading.md  index.md  visualization_gallery.md
docs/references/: bibliography.md  glossary.md
docs/theory/: agencity.md  equations.md  interpretation.md  principles.md
docs/tutorials/: full_pipeline.md  preprocessing.md  quickstart.md
examples/: README.md
examples/advanced/: agencity_clustering.py  agencity_clustering_visual.py  agencity_signature.py  agencity_spectrum.py  agencity_study.py  compare_signatures.py  full_pipeline.py
examples/basic/: explore_signal.py  simple_compute.py
examples/datasets/: sample_signal.csv
examples/publication/: agencity_vs_classical.py
scripts/: README.md  build_docs.bat  build_docs.sh  clean.bat  clean.sh  release.bat  release.sh  run_tests.bat  run_tests.sh
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/regression/: test_regression_signals.py
tests/unit/: test_core_math.py  test_utils.py
